fixes dropdown button taking up space when invisible

--- a/main_app/static/styles/main.scss
+++ b/main_app/static/styles/main.scss
@@ -297,7 +297,7 @@ strong {
 }
 
 .dropdown {
-  visibility: hidden;
+  display: none;
 
   .dropdown-menu {
     right: 0;
@@ -334,6 +334,6 @@ strong {
   }
 
   .dropdown {
-    visibility: visible;
+    display: initial;
   }
 }
